hotfix/text-overflow-issue

--- a/blocks/element/__name/element__name.css
+++ b/blocks/element/__name/element__name.css
@@ -7,4 +7,5 @@
   font-weight: 900;
   font-size: 24px;
   line-height: 1.21; /* 29px; */
+  max-width: 200px;
 }
